add mouseover event listener

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     </head>
     <body>
         <header>
-            <h3>Dakota's project</h3>
+            <h3>Virtual Met Museum</h3>
         </header>
         <div>
             <form id="description-input">
-                <label for="artist">Artist:</label>
-                <input type="string" name="artist" id="artist" />
+             <!--   <label for="artist">Artist:</label>
+                <input type="string" name="artist" id="artist" /> 
+            --> 
                 <label for="departments"> Department:</label>
                 <select name="departments" id="departments">
                     <option value=0></option>
