add display previous button

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <a id="img-link">
                 <img id="todays-image"> <img>
             </a>
+            <button id="previous">Display Previous</button>
             <ul id="description"></ul>
         </div>
         
