--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
             <h3>Virtual Met Museum</h3>
             <br>
         </header>
-        <div style="width:50%; float: left; display: inline-block;">
+        <div style="width:30%; float: left; display: inline-block;">
             <br>
             <form id="description-input">
-             <!--   <label for="artist">Artist:</label>
-                <input type="string" name="artist" id="artist" /> --> 
-                <label for="departments"> Department:</label>
+                <input type="string" name="subject-query" id="subject-query" placeholder = "Subject"/>
+                <br>
+                <br>
                 <select name="departments" id="departments">
-                    <option value=0></option>
+                    <option value=0>Select a Department...</option>
                     <option value=1>American Decorative Arts</option>
                     <option value=3>Ancient Near Eastern Art</option>
                     <option value=4>Arms and Armor</option>
@@ -36,19 +36,25 @@
                     <option value=19>Photographs</option>
                     <option value=21>Modern Art</option>
                 </select>
-                <input type="submit" id='submit-button' value="Show me a work of art!" />
+                <br>
+                <br>
+                <input type="submit" id='submit-button' value="Display Art >>" />
             </form>
-            <button id="previous">Display Previous</button>
+            <br>
+            <br>
             <ul id="description"></ul>
         </div>
 
-        <div style="width:50%; 
-        float: left; 
-        display: inline-block;">
+        <div class = "img-container" style="width:70%; 
+        float: left;"">
             <br>
             <a id="img-link">
                 <img id="todays-image"> <img>
             </a>
+            <br>
+            <br>
+            <button id="previous"> << Display Previous</button>
+            
         </div>
 
         
