--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <h3>Virtual Met Museum</h3>
             <br>
         </header>
-        <div style="width:30%; float: left; display: inline-block;">
+        <div style="width:30%; display: inline-block;">
             <br>
             <form id="description-input">
                 <input type="string" name="subject-query" id="subject-query" placeholder = "Subject"/>
@@ -46,7 +46,7 @@
         </div>
 
         <div class = "img-container" style="width:70%; 
-        float: left;"">
+        float: left;">
             <br>
             <a id="img-link">
                 <img id="todays-image"> <img>
